infra/terraform/AWS/ec2-ready-solution/vpc/gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.prefix}-${var.env}-igw"
  }
}
